ligolang/src/test/contracts/negative/deep_pattern_matching/pm_fail2.mligo
type myt = Nil | Cons of (int * int)

let t = fun (x: myt * myt) ->
  match x with
  | Nil , (a,b,c) -> 1
  | xs  , Nil -> 2
  | Cons (a,b) , Cons (c,d) -> a + b + c + d